--- a/styles/sass/partials/header/vtex.flex-layout.scss
+++ b/styles/sass/partials/header/vtex.flex-layout.scss
@@ -78,7 +78,7 @@
   position: absolute;
   left: 32px;
   bottom: 0;
-  z-index: 997;
+  z-index: 995;
 
   .flexRowContent--brand-switcher-container {
     display: flex;
