--- a/styles/sass/partials/header/vtex.store-link.scss
+++ b/styles/sass/partials/header/vtex.store-link.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   text-decoration: none;
   gap: 8px;
-  z-index: 997;
+  z-index: 995;
   top: 4px;
 
   .label--help-center {
